# python-REST-service-to-manage-updates

./: .env.example  .env.test  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  Universal_project.drawio  alembic.ini  celerybeat-schedule.db  docker-compose.yaml  pyproject.toml
docs/: Notification-Service-Sequence.drawio  erd.puml  project-structure.puml
migrations/: env.py
migrations/versions/: 4aba3278cea1_new_migration.py
updateservice/: app.py  celeryapp.py  connection_db.py  settings.py  tasks.py
updateservice/api_tests/: conftest.py  test_application_endpoint.py  test_application_group_endpoint.py  test_connection_db.py  test_healthcheck.py  test_http_endpoint.py  test_package_endpoint.py  test_team_endpoint.py  test_tokens.py  test_user_endpoint.py
updateservice/apis/: application_api.py  application_group_api.py  health_api.py  hello_api.py  package_api.py  team_api.py  tokens_api.py  user_api.py
updateservice/backup_storage/Package_1234/: 1234.txt
updateservice/backup_storage/Package_222/: dsad.py
updateservice/backup_storage/Package_28/: asdas.py
updateservice/backup_storage/Package_8821/: dasda
updateservice/models/: application.py  application_group.py  backup.py  package.py  schema.py  schema_application.py  schema_application_group.py  schema_package.py  schema_tokens.py  token.py  user_teams.py
updateservice/repositories/: application_group_repo.py  application_repo.py  db_repo.py  hello_repo.py  package_repo.py  team_repo.py  tokens_repo.py  user_repo.py
updateservice/services/: db_srv.py  hello_srv.py
updateservice/utils/: exceptions.py  token_authentication.py
